--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -13,7 +13,8 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    env:
+      working_directory: ./open-weather/app
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
