--- a/.github/workflows/pythonapp.yml
+++ b/.github/workflows/pythonapp.yml
@@ -17,9 +17,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    env:
-      OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
-      CITY_NAME: "Honolulu"
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.8
@@ -38,4 +36,8 @@ jobs:
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test run application
-      run: python3 .
+      run: python {0}
+      env:
+        OPENWEATHER_API_KEY: ${{ secrets.OPENWEATHER_API_KEY }}
+        CITY_NAME: "Honolulu"
+      working-directory: .
